# anteroom

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
src/anteroom/: app.py  config.py  tls.py
src/anteroom/cli/: __init__.py  repl.py
src/anteroom/routers/: approvals.py  github.py
src/anteroom/services/: approvals.py  event_bus.py  tool_approval.py
src/anteroom/static/: index.html
src/anteroom/static/css/: approvals.css  github.css  style.css
src/anteroom/static/js/: app.js  approvals.js  github.js  theme_bootstrap.js
src/anteroom/tools/: __init__.py
src/parlor/: __init__.py  __main__.py  app.py  config.py  db.py  models.py
src/parlor/cli/: renderer.py  repl.py
src/parlor/routers/: chat.py  config_api.py  conversations.py
src/parlor/services/: ai_service.py  mcp_manager.py  storage.py
src/parlor/static/: index.html
src/parlor/static/js/: app.js  attachments.js  chat.js  sidebar.js
tests/unit/: test_app_approvals_integration.py  test_approvals.py  test_approvals_cleanup.py  test_approvals_router.py  test_destructive_confirm_callback.py  test_github_router.py  test_mcp_manager.py  test_storage.py  test_tools_destructive_detection.py
